Fixed alignment.

--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,39 @@ h2{
     text-align:center;
     font-size:40px;
 }
+
+#userInput{
+    height:100px;
+    width:500px;
+    border-radius: 100px;
+    font-size:80px;
+    border:solid black 2px;
+    text-align:center;
+}
+
+
+#userSubmit{
+    width:100px;
+    padding:10px;
+    border-radius:100px;
+    border: solid black 2px;
+    transition:all .2s;
+}
+
+#userSubmit:hover{
+    background-color:purple;
+    color:white;
+    transform: scale(1.2);
+}
+
+#userSubmit:active{
+    background-color:rgb(53, 0, 53);
+    transition:none;
+}
+
+.user{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    gap:20px;
+}
